changing test to run every 15 days

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,7 @@
 name: Test
-on: 
-  push:
-    branches:
-      - master
+on:
+  schedule:
+    - cron:  '* * */15 * *'
 jobs:
   build:
     runs-on: ubuntu-latest
